converted InfoProfessorship to an InfoProfessorship wrapper